Moved on using DTOs and did manual mapping